update navigation bars in index and docs

--- a/documentation/references.html
+++ b/documentation/references.html
@@ -68,78 +68,80 @@
   </head>
   <body>
     <section class="header">
-      <div class="topLeftLogo">  
-        <!-- logo top left -->
-        <div class="headerLogoContainer">
-          <img id="logo" class="headerLogoImage" src="../img/svLogoTitle.png" alt="SimVascular Logo"></img>
+      <div class="row navRow">
+        <div class="col-6 topLeftLogo">  
+          <!-- logo top left -->
+          <div class="headerLogoContainer">
+            <img id="logo" class="headerLogoImage" src="../img/svLogoTitle.png" alt="SimVascular Logo"></img>
+          </div>
         </div>
-      </div>
-      <div class="topRightBars">
-        <div id="headerNavBar">
-          <details>
-            <summary><i class="fa-solid fa-bars" id="iconForSkip"></i></summary>
-            <div class="navBarSection">
-              <div class="navLink">
-                <p href="../index.html">
-                  <i class="iconInHeader fa-solid fa-house"></i>Home
-                </p>
+        <div class="col-6 topRightBars">
+          <div id="headerNavBar">
+            <details>
+              <summary><i class="fa-solid fa-bars" id="iconForSkip"></i></summary>
+              <div class="navBarSection">
+                <div class="navLink">
+                  <p href="../index.html">
+                    <i class="iconInHeader fa-solid fa-house"></i>Home
+                  </p>
+                </div>
+                <details>
+                  <summary class="navTitle"><i class="iconInHeader fa-solid fa-user"></i>User Guides</summary>
+                  <div>
+                    <div class="navSubLink">
+                      <p href="quickguide.html">Getting Started</p>
+                    </div>
+                    <div class="navSubLink">
+                      <p href="modeling.html">Modeling</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="meshing.html">Meshing</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="flowsolver.html">Simulation</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="svfsi.html">svFSI</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="simcardio.html">SimCardio</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="rom_simulation.html">ROM Simulation</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="genbc.html">General B.C.</p> 
+                    </div>
+                    <div class="navSubLink">
+                      <p href="python_interface.html">Python Interface</p> 
+                    </div>
+                    <div class="navSubLink active">
+                      <p href="references.html">References</p> 
+                    </div>
+                  </div>
+                </details>
+                <details>
+                  <summary class="navTitle"><i class="iconInHeader fa-solid fa-stethoscope" style="padding-right: 15px"></i>Clinical Cases</summary>
+                  <div>
+                    <div class="navSubLink">
+                      <p href="../clinical/coronary.html">Coronary Normal</a>                  
+                    </div>
+                    <div class="navSubLink">
+                      <p href="../clinical/aortofemoral1.html">Aortofemoral Normal - 1</a>                  
+                    </div>
+                    <div class="navSubLink">
+                      <p href="../clinical/aortofemoral2.html">Aortofemoral Normal - 2</a>                  
+                    </div>
+                    <div class="navSubLink">
+                      <p href="../clinical/pulmonary.html">Healthy Pulmonary</a>                  
+                    </div>
+                    <div class="navSubLink">
+                      <p href="https://simtk.org/projects/sv_tests">All Demo Projects</a>                  
+                    </div>
+                  </div>
+                </details>
               </div>
-              <details>
-                <summary class="navTitle"><i class="iconInHeader fa-solid fa-user"></i>User Guides</summary>
-                <div>
-                  <div class="navSubLink">
-                    <p href="quickguide.html">Getting Started</p>
-                  </div>
-                  <div class="navSubLink">
-                    <p href="modeling.html">Modeling</p> 
-                  </div>
-                  <div class="navSubLink">
-                    <p href="meshing.html">Meshing</p> 
-                  </div>
-                  <div class="navSubLink">
-                    <p href="flowsolver.html">Simulation</p> 
-                  </div>
-                  <div class="navSubLink">
-                    <p href="svfsi.html">svFSI</p> 
-                  </div>
-                  <div class="navSubLink">
-                    <p href="simcardio.html">SimCardio</p> 
-                  </div>
-                  <div class="navSubLink">
-                    <p href="rom_simulation.html">ROM Simulation</p> 
-                  </div>
-                  <div class="navSubLink">
-                    <p href="genbc.html">General B.C.</p> 
-                  </div>
-                  <div class="navSubLink">
-                    <p href="python_interface.html">Python Interface</p> 
-                  </div>
-                  <div class="navSubLink active">
-                    <p href="references.html">References</p> 
-                  </div>
-                </div>
-              </details>
-              <details>
-                <summary class="navTitle"><i class="iconInHeader fa-solid fa-stethoscope" style="padding-right: 15px"></i>Clinical Cases</summary>
-                <div>
-                  <div class="navSubLink">
-                    <p href="../clinical/coronary.html">Coronary Normal</a>                  
-                  </div>
-                  <div class="navSubLink">
-                    <p href="../clinical/aortofemoral1.html">Aortofemoral Normal - 1</a>                  
-                  </div>
-                  <div class="navSubLink">
-                    <p href="../clinical/aortofemoral2.html">Aortofemoral Normal - 2</a>                  
-                  </div>
-                  <div class="navSubLink">
-                    <p href="../clinical/pulmonary.html">Healthy Pulmonary</a>                  
-                  </div>
-                  <div class="navSubLink">
-                    <p href="https://simtk.org/projects/sv_tests">All Demo Projects</a>                  
-                  </div>
-                </div>
-              </details>
-            </div>
+          </div>
         </div>
       </div>
     </section>
