--- a/documentation/simcardio.html
+++ b/documentation/simcardio.html
@@ -340,7 +340,7 @@
       </span>
     </section>
   </section>
-  <section id="skipToTopBackground">
+  <section id="skipToTopSection">
       <p id="skipToTop"><i class="fa-solid fa-arrow-up"></i></p>
     </div>
   </section>
