--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </tr>
                 <tr class="skipTo repository">
                   <th>
-                    <p class="skipItem">Repository</p>
+                    <p class="skipItem">Model Repository</p>
                   </th>
                 </tr>
                 <tr class="skipTo gateway">
