navbar to anchor lins + template_clinical

--- a/documentation/simcardio.html
+++ b/documentation/simcardio.html
@@ -82,42 +82,42 @@
               <summary><i class="fa-solid fa-bars" id="iconForSkip"></i></summary>
               <div class="navBarSection">
                 <div class="navLink">
-                  <p href="../index.html">
+                  <a href="../index.html">
                     <i class="iconInHeader fa-solid fa-house"></i>Home
-                  </p>
+                  </a>
                 </div>
                 <details>
                   <summary class="navTitle"><i class="iconInHeader fa-solid fa-user"></i>User Guides</summary>
                   <div>
                     <div class="navSubLink">
-                      <p href="quickguide.html">Getting Started</p>
+                      <a href="quickguide.html">Getting Started</a>
                     </div>
                     <div class="navSubLink">
-                      <p href="modeling.html">Modeling</p> 
+                      <a href="modeling.html">Modeling</a> 
                     </div>
                     <div class="navSubLink">
-                      <p href="meshing.html">Meshing</p> 
+                      <a href="meshing.html">Meshing</a> 
                     </div>
                     <div class="navSubLink">
-                      <p href="flowsolver.html">Simulation</p> 
+                      <a href="flowsolver.html">Simulation</a> 
                     </div>
                     <div class="navSubLink">
-                      <p href="svfsi.html">svFSI</p> 
+                      <a href="svfsi.html">svFSI</a> 
                     </div>
                     <div class="navSubLink active">
-                      <p href="simcardio.html">SimCardio</p> 
+                      <a href="simcardio.html">SimCardio</a> 
                     </div>
                     <div class="navSubLink">
-                      <p href="rom_simulation.html">ROM Simulation</p> 
+                      <a href="rom_simulation.html">ROM Simulation</a> 
                     </div>
                     <div class="navSubLink">
-                      <p href="genbc.html">General B.C.</p> 
+                      <a href="genbc.html">General B.C.</a> 
                     </div>
                     <div class="navSubLink">
-                      <p href="python_interface.html">Python Interface</p> 
+                      <a href="python_interface.html">Python Interface</a> 
                     </div>
                     <div class="navSubLink">
-                      <p href="references.html">References</p> 
+                      <a href="references.html">References</a> 
                     </div>
                   </div>
                 </details>
@@ -125,19 +125,19 @@
                   <summary class="navTitle"><i class="iconInHeader fa-solid fa-stethoscope" style="padding-right: 15px"></i>Clinical Cases</summary>
                   <div>
                     <div class="navSubLink">
-                      <p href="../clinical/coronary.html">Coronary Normal</a>                  
+                      <a href="../clinical/coronary.html">Coronary Normal</a>                  
                     </div>
                     <div class="navSubLink">
-                      <p href="../clinical/aortofemoral1.html">Aortofemoral Normal - 1</a>                  
+                      <a href="../clinical/aortofemoral1.html">Aortofemoral Normal - 1</a>                  
                     </div>
                     <div class="navSubLink">
-                      <p href="../clinical/aortofemoral2.html">Aortofemoral Normal - 2</a>                  
+                      <a href="../clinical/aortofemoral2.html">Aortofemoral Normal - 2</a>                  
                     </div>
                     <div class="navSubLink">
-                      <p href="../clinical/pulmonary.html">Healthy Pulmonary</a>                  
+                      <a href="../clinical/pulmonary.html">Healthy Pulmonary</a>                  
                     </div>
                     <div class="navSubLink">
-                      <p href="https://simtk.org/projects/sv_tests">All Demo Projects</a>                  
+                      <a href="https://simtk.org/projects/sv_tests">All Demo Projects</a>                  
                     </div>
                   </div>
                 </details>
