--- a/clinical/aortofemoral2.html
+++ b/clinical/aortofemoral2.html
@@ -81,42 +81,42 @@
               <summary><i class="fa-solid fa-bars" id="iconForSkip"></i></summary>
               <div class="navBarSection">
                 <div class="navLink">
-                  <p href="../index.html">
+                  <a href="../index.html">
                     <i class="iconInHeader fa-solid fa-house"></i>Home
-                  </p>
+                  </a>
                 </div>
                 <details>
                   <summary class="navTitle"><i class="iconInHeader fa-solid fa-user"></i>User Guides</summary>
                   <div>
                     <div class="navSubLink">
-                      <p href="../documentation/quickguide.html">Getting Started</p>
+                      <a href="../documentation/quickguide.html">Getting Started</a>
                     </div>
                     <div class="navSubLink">
-                      <p href="../documentation/modeling.html">Modeling</p> 
+                      <a href="../documentation/modeling.html">Modeling</a> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../documentation/meshing.html">Meshing</p> 
+                      <a href="../documentation/meshing.html">Meshing</a> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../documentation/flowsolver.html">Simulation</p> 
+                      <a href="../documentation/flowsolver.html">Simulation</a> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../documentation/svfsi.html">svFSI</p> 
+                      <a href="../documentation/svfsi.html">svFSI</a> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../documentation/simcardio.html">SimCardio</p> 
+                      <a href="../documentation/simcardio.html">SimCardio</a> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../documentation/rom_simulation.html">ROM Simulation</p> 
+                      <a href="../documentation/rom_simulation.html">ROM Simulation</a> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../documentation/genbc.html">General B.C.</p> 
+                      <a href="../documentation/genbc.html">General B.C.</a> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../documentation/python_interface.html">Python Interface</p> 
+                      <a href="../documentation/python_interface.html">Python Interface</a> 
                     </div>
                     <div class="navSubLink">
-                      <p href="../documentation/references.html">References</p> 
+                      <a href="../documentation/references.html">References</a> 
                     </div>
                   </div>
                 </details>
@@ -124,19 +124,19 @@
                   <summary class="navTitle"><i class="iconInHeader fa-solid fa-stethoscope" style="padding-right: 15px"></i>Clinical Cases</summary>
                   <div>
                     <div class="navSubLink">
-                      <p href="coronary.html">Coronary Normal</a>                  
-                    </div>
-                    <div class="navSubLink">
-                      <p href="aortofemoral1.html">Aortofemoral Normal - 1</a>                  
+                      <a href="coronary.html">Coronary Normal</a>                  
                     </div>
                     <div class="navSubLink active">
-                      <p href="aortofemoral2.html">Aortofemoral Normal - 2</a>                  
+                      <a href="aortofemoral1.html">Aortofemoral Normal - 1</a>                  
                     </div>
                     <div class="navSubLink">
-                      <p href="pulmonary.html">Healthy Pulmonary</a>                  
+                      <a href="aortofemoral2.html">Aortofemoral Normal - 2</a>                  
                     </div>
                     <div class="navSubLink">
-                      <p href="https://simtk.org/projects/sv_tests">All Demo Projects</a>                  
+                      <a href="pulmonary.html">Healthy Pulmonary</a>                  
+                    </div>
+                    <div class="navSubLink">
+                      <a href="https://simtk.org/projects/sv_tests">All Demo Projects</a>                  
                     </div>
                   </div>
                 </details>
