--- a/documentation/template_docs.html
+++ b/documentation/template_docs.html
@@ -97,7 +97,7 @@
                     <div class="navSubLink">
                       <a href="meshing.html">Meshing</a> 
                     </div>
-                    <div class="navSubLink active">
+                    <div class="navSubLink">
                       <a href="flowsolver.html">Simulation</a> 
                     </div>
                     <div class="navSubLink">
@@ -146,135 +146,50 @@
       </div>
     </section>
 
-    <section class="mainSection">
+  <section class="mainSection">
     <section class="navigationSection" style="float: left">
-      <div>
-        <h3>Download</h3>
-          <h4 class="clickLink https://simtk.org/frs/download_confirm.php/file/5114/CylinderProject.zip?group_id=930">Cylinder Example Project</h4>
-      </div>
-      <div style="padding: 0">
-        <h3>Simulation Guide</h3>
-      </div>
-      <div>
-        <h4 class="skipTo introduction">Introduction</h4>
-      </div>
-      <div>
-        <h4 class="skipTo overview">Overview</h4>
-      </div>
-      <div>
-        <h4 class="skipTo bcphysics">Boundary Conditions</h4>
-      </div>
-      <div>
-        <h4 class="skipTo creatingjob">Creating Job</h4>
-      </div>
-      <div>
-        <h4 class="skipTo basic">Basic Parameters</h4>
         <div>
-          <p class="skipTo inflowbc">Inflow BC</p>
-          <p class="skipTo outletbc">Outlet BC</p>
-          <p class="skipTo wallproperties">Wall Properties</a>
-            <p class="skipTo solverparameters">Solver Parameters</p>
-          <p class="skipTo creatingdata">Creating Data Files</p>
-          <p class="skipTo runningjob">Running Job</a>
+            <h4 class="skipTo section_1">Section #1</h4>
+            <div>
+                <p class="skipTo section_1_sub_section_1">Sub section #1</p>
+                <p class="skipTo section_1_sub_section_2">Sub section #2</p>
+                <p class="skipTo section_1_sub_section_3">Sub section #3</p>
+            </div>
         </div>
-      </div>
-      <div>
-        <h4 class="skipTo postprocess">Postprocessing</h4>
-      </div>
-      <div>
-        <h4 class="skipTo examples">Examples</h4>
         <div>
-          <p class="skipTo example2">Example 2</p>
-          <p class="skipTo example3">Example 3</p>
-          <p class="skipTo example4">Example 4</p>
+            <h4 class="skipTo section_2">Section #2</h4>
+            <div>
+                <p class="skipTo section_2_sub_section_1">Sub section #1</p>
+                <p class="skipTo section_2_sub_section_2">Sub section #2</p>
+                <p class="skipTo section_2_sub_section_3">Sub section #3</p>
+            </div>
         </div>
-      </div>
-      <div>
-        <h4 class="skipTo appendix">Appendix</h4>
-        <div>
-          <p class="skipTo solverconfiguration">Configurating Solvers</p>
-          <p class="skipTo presolvercommands">svPre Commands</p>
-          <p class="skipTo bctfile">BCT File</p>
-          <p class="skipTo solverinp">solver.inp Guide</p>
-          <p class="skipTo impbcfile">Impedance BC Files</p>
-          <p class="skipTo rcrtfile">RCR BC File</p>
-          <p class="skipTo cortfile">COR BC File</p>
-        </div>
-      </div>
     </section>
 
     <section class="docsSection" style="float: right">
-      <span id="introduction">
-        <zero-md id="math" src="flowsolver/intro/readme.md" no-shadow></zero-md>
+      <span id="section_1">
+        <zero-md id="math" src="template/section_1/intro/readme.md" no-shadow></zero-md>
       </span>
-      <span id="overview">
-        <zero-md  src="flowsolver/overview/readme.md" no-shadow></zero-md>
+      <span id="section_1_sub_section_1">
+        <zero-md  src="template/section_1/sub_section_1/readme.md" no-shadow></zero-md>
       </span>
-      <span id="bcphysics">
-        <zero-md src="flowsolver/bc_physics/readme.md" no-shadow></zero-md>
+      <span id="section_1_sub_section_2">
+        <zero-md src="template/section_1/sub_section_2/readme.md" no-shadow></zero-md>
       </span>
-      <span id="creatingjob">
-        <zero-md src="flowsolver/creating_job/readme.md" no-shadow></zero-md>
+      <span id="section_1_sub_section_3">
+        <zero-md src="template/section_1/sub_section_3/readme.md" no-shadow></zero-md>
       </span>
-      <span id="basic">
-        <zero-md src="flowsolver/basic/readme.md" no-shadow></zero-md>
+      <span id="section_2">
+        <zero-md src="template/section_2/intro/readme.md" no-shadow></zero-md>
       </span>
-      <span id="inflowbc">
-        <zero-md src="flowsolver/inflow_bc/readme.md" no-shadow></zero-md>
+      <span id="section_2_sub_section_1">
+        <zero-md src="template/section_2/sub_section_1/readme.md" no-shadow></zero-md>
       </span>
-      <span id="outletbc">
-        <zero-md src="flowsolver/outlet_bc/readme.md" no-shadow></zero-md>
+      <span id="section_2_sub_section_2">
+        <zero-md src="template/section_2/sub_section_2/readme.md" no-shadow></zero-md>
       </span>
-      <span id="wallproperties">
-        <zero-md src="flowsolver/wall_properties/readme.md" no-shadow></zero-md>
-      </span>
-      <span id="solverparameters">
-        <zero-md src="flowsolver/solver_parameters/readme.md" no-shadow></zero-md>
-      </span>
-      <span id="creatingdata">
-        <zero-md src="flowsolver/creating_data/readme.md" no-shadow></zero-md>
-      </span>
-      <span id="runningjob">
-        <zero-md src="flowsolver/running_job/readme.md" no-shadow></zero-md>
-      </span>
-      <span id="postprocess">
-        <zero-md src="flowsolver/postprocess/readme.md" no-shadow></zero-md>
-      </span>
-      <span id="examples">
-        <zero-md src="flowsolver/examples/readme.md" no-shadow></zero-md>
-      </span>
-      <span id="example2">
-        <zero-md src="flowsolver/example_2/readme.md" no-shadow></zero-md>
-      </span>
-      <span id="example3">
-        <zero-md src="flowsolver/example_3/readme.md" no-shadow></zero-md>
-      </span>
-      <span id="example4">
-        <zero-md src="flowsolver/example_4/readme.md" no-shadow></zero-md>
-      </span>
-      <span id="appendix">
-        <zero-md src="flowsolver/appendix/readme.md" no-shadow></zero-md>
-      </span>
-      <span id="solverconfiguration">
-        <zero-md src="flowsolver/solver_configuration/readme.md" no-shadow></zero-md>
-      </span>
-      <span id="presolvercommands">
-        <zero-md src="flowsolver/presolver_commands/readme.md" no-shadow></zero-md>
-      </span>
-      <span id="bctfile">
-        <zero-md src="flowsolver/bct_file/readme.md" no-shadow></zero-md>
-      </span>
-      <span id="solverinp">
-        <zero-md src="flowsolver/solver_inp_guide/readme.md" no-shadow></zero-md>
-      </span>
-      <span id="impbcfile">
-        <zero-md src="flowsolver/imp_files/readme.md" no-shadow></zero-md>
-      </span>
-      <span id="rcrtfile">
-        <zero-md src="flowsolver/rcrt_file/readme.md" no-shadow></zero-md>
-      </span>
-      <span id="cortfile">
-        <zero-md src="flowsolver/cort_file/readme.md" no-shadow></zero-md>
+      <span id="section_2_sub_section_3">
+        <zero-md src="template/section_2/sub_section_3/readme.md" no-shadow></zero-md>
       </span>
     </section>
   </section>
