fix style confusion and rename a file

--- a/documentation/svfsi.html
+++ b/documentation/svfsi.html
@@ -170,7 +170,7 @@
         <h4 class="skipTo install">Installation</h4>
         <div>
           <p class="skipTo installer">Precompiled installer</p>
-          <p class="skipTo container">Docker container</p>
+          <p class="skipTo docker_container">Docker container</p>
           <p class="skipTo source">Build from source</p>
         </div>
       </div>
@@ -201,8 +201,8 @@
       <span id="installer">
         <zero-md src="svfsi/main/install_installer/readme.md" no-shadow></zero-md>
       </span>
-      <span id="container">
-        <zero-md src="svfsi/main/install_container/readme.md" no-shadow></zero-md>
+      <span id="docker_container">
+        <zero-md src="svfsi/main/docker_container/readme.md" no-shadow></zero-md>
       </span>
       <span id="source">
         <zero-md src="svfsi/main/install_source/readme.md" no-shadow></zero-md>
