replace skipToTop icon in simcardio.html

--- a/documentation/simcardio.html
+++ b/documentation/simcardio.html
@@ -340,9 +340,8 @@
       </span>
     </section>
   </section>
-  <section id="skipToTopSection">
-      <p id="skipToTop"><i class="fa-solid fa-arrow-up"></i></p>
-    </div>
+  <section class="skipToTopSection">
+    <p id="skipToTop"><i class="fa-solid fa-arrow-up"></i></p>
   </section>
 
 
