--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   
   <!-- Required meta tags -->
   <meta charset="utf-8">
+  <meta name="description" content="Simvascular is the only fully open-source software package providing a complete pipeline 
+  from medical image data segmentation to patient specific blood flow simulation 
+  and analysis.">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Custom Fonts -->
