organize image folders and start on readme.md

--- a/documentation/meshing.html
+++ b/documentation/meshing.html
@@ -48,7 +48,7 @@
   ></script>
   
       <!-- browser tab labels -->
-    <link rel="shortcut icon" type="image/jpg" href="../img/svIcon.png"></link>
+    <link rel="shortcut icon" type="image/jpg" href="../img/svlogo/svIcon.png"></link>
     <title>SimVascular Docs</title>
 
   <!-- Google Analytics Manager -->
@@ -72,7 +72,7 @@
         <div class="col-6 topLeftLogo">  
           <!-- logo top left -->
           <div class="headerLogoContainer">
-            <img id="logo" class="headerLogoImage" src="../img/svLogoTitle.png" alt="SimVascular Logo"></img>
+            <img id="logo" class="headerLogoImage" src="../img/svlogo/svLogoTitle.png" alt="SimVascular Logo"></img>
           </div>
         </div>
         <div class="col-6 topRightBars">
