--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link rel="stylesheet" href="css/home.css">
   
   <!-- browser tab labels -->
-  <link rel="shortcut icon" type="image/png" href="img/svIcon.png"></link>
+  <link rel="shortcut icon" type="image/png" href="img/svlogo/svIcon.png"></link>
   <title>SimVascular</title>
 
   <!-- Google Analytics Manager -->
@@ -127,7 +127,7 @@
     </div>
     <div class="topLeftLogo">      
       <div class="headerLogoContainer">
-        <img id="logo" class="headerLogoImage" src="img/svLogoTitle.png" alt="SimVascular Logo"></img>
+        <img id="logo" class="headerLogoImage" src="img/svlogo/svLogoTitle.png" alt="SimVascular Logo"></img>
       </div>
     </div>
   </section>
@@ -446,21 +446,21 @@
 
             <!-- Full images with numbers and message Info -->
             <div class="slides picSlides">
-              <img src="img/Img_Gallery_01.png" style="width:100%">
+              <img src="img/gallery/first_panel.png" style="width:100%">
               <div class="caption">BLOOD FLOW IN CABG SIMULATION</div>
             </div>
 
             <div class="slides picSlides">
-              <img src="img/Img_Gallery_02.png" style="width:100%">
+              <img src="img/gallery/second_panel.png" style="width:100%">
               <div class="caption">BLOOD VELOCITY DISTRIBUTION IN CABG SIMULATION</div>
             </div>
 
             <div class="slides picSlides">
-              <img src="img/Img_Gallery_03.png" style="width:100%">
+              <img src="img/gallery/third_panel.png" style="width:100%">
               <div class="caption">BLOOD VELOCITY IN CORONARY ANEURISM</div>
             </div>
             <div class="slides picSlides">
-              <img src="img/Img_Gallery_04.png" style="width:100%">
+              <img src="img/gallery/fourth_panel.png" style="width:100%">
               <div class="caption">HEMI-FONTAN CAVOPULMONARY CONNECTION</div>
             </div>
             <!-- Back and forward buttons -->
@@ -683,7 +683,7 @@
           <div class="team-triangle">
             <a href="https://profiles.stanford.edu/alison-marsden" target="_blank">
               <div class="team-content">
-                <img src="img/amarsden.jpeg" alt="Image of Alison Marsden">
+                <img src="img/team/amarsden.jpeg" alt="Image of Alison Marsden">
                 <div class="team-hover text-center"  style="cursor:pointer">
                   <p style="font-size: 17px;">Alison Marsden</p>
                 </div>
@@ -697,7 +697,7 @@
           <div class="team-triangle">
             <a href="https://me.berkeley.edu/people/shawn-shadden/" target="_blank">
               <div class="team-content">
-                <img src="img/sshadden.jpeg" alt="Image of Shawn Shadden">
+                <img src="img/team/sshadden.jpeg" alt="Image of Shawn Shadden">
                 <div class="team-hover text-center"  style="cursor:pointer">
                   <p style="font-size: 17px;">Shawn Shadden</p>
                 </div>
@@ -711,7 +711,7 @@
           <div class="team-triangle">
             <a href="https://profiles.stanford.edu/david-parker" target="_blank">
               <div class="team-content">
-                <img src="img/dparker.jpg" alt="Image of Dave Parker">
+                <img src="img/team/dparker.jpg" alt="Image of Dave Parker">
                 <div class="team-hover text-center" style="cursor:pointer">
                   <p style="font-size: 17px;">Dave Parker</p>
                 </div>
@@ -725,7 +725,7 @@
           <div class="team-triangle">
             <a href="https://www.me.columbia.edu/faculty/vijay-vedula" target="_blank">
               <div class="team-content">
-                <img src="img/vvedula.jpg" alt="Image of Vijay Vedula">
+                <img src="img/team/vvedula.jpg" alt="Image of Vijay Vedula">
                 <div class="team-hover text-center"  style="cursor:pointer">
                   <p style="font-size: 17px;">Vijay Vedula</p>
                 </div>
@@ -739,7 +739,7 @@
           <div class="team-triangle">
             <a href="https://profiles.stanford.edu/martin-pfaller" target="_blank">
               <div class="team-content">
-                <img src="img/mpfaller.jpeg" alt="Image of Martin Pfaller">
+                <img src="img/team/mpfaller.jpeg" alt="Image of Martin Pfaller">
                 <div class="team-hover text-center"  style="cursor:pointer">
                   <p style="font-size: 17px;">Martin Pfaller</p>
                 </div>
@@ -753,7 +753,7 @@
           <div class="team-triangle">
             <a href="https://profiles.stanford.edu/luca-pegolotti" target="_blank">
               <div class="team-content" id="lpegolotti">
-                <img src="img/lpegolotti.jpeg" alt="Image of Luca Pegolotti">
+                <img src="img/team/lpegolotti.jpeg" alt="Image of Luca Pegolotti">
                 <div class="team-hover text-center"  style="cursor:pointer">
                   <p style="font-size: 17px;">Luca Pegolotti</p>
                 </div>
@@ -773,13 +773,13 @@
     <div class="newSectionContent">
       <div class="row creditsRow">
         <div class="col-sm-6 col-12 creditContainer">
-          <img class="creditImage" src="img/stanfordmedicine.jpg" alt="Logo for Stanford Medicine"></img>
+          <img class="creditImage" src="img/institutions/stanfordmedicine.jpg" alt="Logo for Stanford Medicine"></img>
         </div>
         <div class="col-sm-6 col-12 creditContainer">
-          <img class="creditImage" src="img/ucberkeley.png" alt="Logo for UC Berkeley"></img>
+          <img class="creditImage" src="img/institutions/ucberkeley.png" alt="Logo for UC Berkeley"></img>
         </div>
         <div class="col-sm-4 col-12 creditContainer">
-          <img class="creditImage" src="img/osmsc.png" alt="Logo for osmsc"></img>
+          <img class="creditImage" src="img/institutions/osmsc.png" alt="Logo for osmsc"></img>
         </div>
       </div>
     </div>
@@ -798,16 +798,16 @@
     <div class="newSectionContent">
       <div class="row creditsRow gx-5">
         <div class="col-sm-6 col-12 creditContainer p-5">
-          <img class="creditImage" src="img/simtk.png" alt="Logo for SimTK"></img>
+          <img class="creditImage" src="img/institutions/simtk.png" alt="Logo for SimTK"></img>
         </div>
         <div class="col-sm-6 col-12 creditContainer p-5">
-          <img class="creditImage" src="img/nsf.png" alt="Logo for NSF"></img>
+          <img class="creditImage" src="img/institutions/nsf.png" alt="Logo for NSF"></img>
         </div>
         <div class="col-sm-6 col-12 creditContainer p-5">
-          <img class="creditImage" src="img/NIH.png" alt="Logo for NIH"></img>
+          <img class="creditImage" src="img/institutions/NIH.png" alt="Logo for NIH"></img>
         </div>
         <div class="col-sm-6 col-12 creditContainer p-5">
-          <img class="creditImage" src="img/addventures.png" alt="Logo for SimTK"></img>
+          <img class="creditImage" src="img/institutions/addventures.png" alt="Logo for SimTK"></img>
         </div>
       </div>
     </div>
