--- a/clinical/template.html
+++ b/clinical/template.html
@@ -16,7 +16,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-  <!-- This applies styling to the markdown that is generated with the <zero-md> element -->
+  <!-- This applies styling to the elements that aren't generated from markdown -->
   <link rel="stylesheet" href="../css/bootstrap.css">
   <link rel="stylesheet" href="../css/grayscale.css">
   <link rel="stylesheet" href="../css/standards.css">
