--- a/index.html
+++ b/index.html
@@ -265,8 +265,10 @@
               <h2>svFSI</h2>
             </div>
             <div class="applicationsText">
-              <p>A parallel multi-physics finite element solver designed for
-                computational modeling of the cardiovascular system </p>
+              <p>A parallel multi-physics finite element solver, 
+                including ALE-based fluid-structure interaction (FSI), 
+                designed for computational modeling of the 
+                cardiovascular system</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-12">
