link contributing and conduct

--- a/index.html
+++ b/index.html
@@ -428,6 +428,15 @@
     </div>
   </div>
 
+  <div class="section">
+    <div class="newSectionHeader">
+      <h1 id="support">Contributing</h1>
+    </div>
+    <div class="newSectionContent supportContainer" style="text-align: center;">
+      <p class="supportDescription">SimVascular is an open-source project and we welcome contributions! All development happens in our solvers' <a target="_blank" href="https://github.com/SimVascular">GitHub repositories</a>. Please read our <a href="https://github.com/SimVascular/.github/blob/main/CODE_OF_CONDUCT.md" target="_blank">Code of Conduct</a> and <a href="https://github.com/SimVascular/.github/blob/main/CONTRIBUTING.md" target="_blank">Contributing Guidelines</a>.</p>
+    </div>
+  </div>
+
   <div class="everyOtherSection">
     <div class="newSectionHeader">
       <h1 id="gallery">Gallery</h1>
