--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
     </div>
   </div>
 
-  <div class="section">
+  <div class="everyOtherSection">
     <div class="newSectionHeader">
       <h1 id="support">Contributing</h1>
     </div>
@@ -437,7 +437,7 @@
     </div>
   </div>
 
-  <div class="everyOtherSection">
+  <div class="section">
     <div class="newSectionHeader">
       <h1 id="gallery">Gallery</h1>
     </div>
@@ -544,7 +544,7 @@
     </div>
   </div>-->
 
-  <div class="section">
+  <div class="everyOtherSection">
     <div class="newSectionHeader">
       <h1 id="repository">The Vascular Model Repository</h1>
     </div>
@@ -570,7 +570,7 @@
   </div>
   </div>
 
-  <div class="everyOtherSection">
+  <div class="Section">
     <div class="newSectionHeader">
       <h1 id="gateway">Supercomputing Gateway</h1>
     </div>
@@ -579,7 +579,7 @@
     </div>
   </div>
 
-  <div class="section">
+  <div class="everyOtherSection">
     <div class="newSectionHeader">
       <h1 id="socials">Socials</h1>
     </div>
@@ -626,7 +626,7 @@
     </div>
   </div>
 
-  <div class="everyOtherSection">
+  <div class="Section">
     <div class="newSectionHeader">
       <h1 id="news">Recent News</h1>
     </div>
@@ -663,7 +663,7 @@
     </div> 
   </div>  
 
-  <div class="section" style="padding-bottom: 30px">
+  <div class="everyOtherSection" style="padding-bottom: 30px">
     <div class="newSectionHeader">
       <h1 id="team">Team</h1>
     </div>
@@ -757,7 +757,7 @@
     </div>
   </div>
 
-  <div class="everyOtherSection">
+  <div class="Section">
     <div class="newSectionHeader">
       <h1 id="institutions">Institutions</h1>
     </div>
@@ -776,7 +776,7 @@
     </div>
   </div>
 
-  <div class="section">
+  <div class="everyOtherSection">
     <div class="newSectionHeader">
       <h1 id="acknowledgements">Acknowledgements</h1>
     </div>
